package ub.edu.model;

public class Comarca {
    private String nom;

    public Comarca(String nom){
        this.nom = nom;
    }

    public String getNom(){
        return nom;
    }

    public void setNom(String nom) {
        this.nom = nom;
    }
}
