package ub.edu.model.Estat;

public class Acabat extends Estat{
    public Acabat(){

    }
}
