package ub.edu.model.Estat;

public class EnProces extends Estat{
    public EnProces(){
    }

}
