package ub.edu.model.Estat;

public class NoComencat extends Estat{
    public NoComencat(){

    }
}
