package ub.edu.model;

public class Localitat {

    String nom;
    public Localitat(String nom){
        this.nom = nom;
    }

    public String getNom(){ return nom;}

    public void setNom(String nom) {
        this.nom = nom;
    }
}
