package ub.edu.model.Transport;

public class Bici extends Transport{
    public Bici(String id, float velocitat) {
        super(id,velocitat);
    }

    public String toString(){
        return "Bici";
    }
}
