package ub.edu.model.ValoracioStrategy;

public class Like implements ValoracioType {

    private int val;

    public Like(int val){
        this.val=val;
    }

    public int getVal() {
        return val;
    }
}

