package ub.edu.resources.dao;

import ub.edu.model.Comarca;
import ub.edu.model.Ruta;

public interface DAOComarca extends DAO<Comarca>
{

}
