package ub.edu.resources.dao;

import ub.edu.model.Localitat;

public interface DAOLocalitat extends DAO<Localitat>{
}
