package ub.edu.resources.dao;

import ub.edu.model.Ruta;

public interface DAORuta extends DAO<Ruta> {
    // Metodes especifics de excursions si es el cas
}
