package ub.edu.resources.dao;

import ub.edu.model.Transport.Transport;

public interface DAOTransport extends DAO<Transport>{
}
